--- a/4/catalog.html
+++ b/4/catalog.html
@@ -7,67 +7,67 @@
 </head>
   <body>
     <header class="page-header">
-    <!-- Шапка главной страницы -->
-      <h1 class="page-header-title visually-hidden">Каталог гостиниц в окрестностях Седоны: сайт</h1>
-      <!-- Заголовок главной страницы (невидимый) -->
-      <nav class="navigation">
-      <!-- Меню навигации -->
-        <ul class="navigation-list">
-        <!-- Список первой части меню -->
-          <li class="navigation-item">
-            <img class="navigation-link navigation-link-logo" href="index.html" src="#" alt="Рисунок логотипа Седоны">
-            <!-- Основной логотип города Седоны-->
-          </li>
-          <li class="navigation-item">
-            <a class="navigation-link" href="index.html">Главная</a>
-          </li>
-          <li class="navigation-item">
-            <a class="navigation-link" href="about.html">О Седоне</a>
-          </li>
-          <li class="navigation-item">
-            <a class="navigation-link navigation-list-current" href="catalog.html">Гостиницы</a>
-          </li>
-        </ul>
-        <ul class="navigation-list2">
-        <!-- Список второй части меню -->
-          <li class="navigation-list2-item">
-            <a class="navigation-list2-link-quote" href="#">
-            <!-- Открытие модального окна через Поиск -->
-              <img class="navigation-list2-link-img navigation-list2-link-icon" src="#" alt="Иконка - поиск">
-            </a>
-          </li>
-          <li class="navigation-list2-item">
-            <a class="navigation-list2-link-quote" href="#">
-              <img class="navigation-list2-link-img navigation-list2-link-icon"  src="#" alt="Иконка - корзина">
-            </a>
-          </li>
-          <li class="navigation-list2-item">
-            <a class="navigation-list2-item-quote" href="catalog.html">
-              <form class="navigation-list2-item-button">
-                <button class="navigation-list2-item-quote-button" type="button">
-                  <span>Хочу сюда</span>
-                </button>
-              </form>
-            </a>
-          </li>
-        </ul>
-      </nav>
-    </header>
+      <!-- Шапка главной страницы -->
+        <h1 class="page-header-title visually-hidden">База данных гостиниц Седона</h1>
+        <!-- Заголовок главной страницы (невидимый) -->
+        <nav class="navigation">
+        <!-- Меню навигации -->
+          <ul class="navigation-list">
+          <!-- Список первой части меню -->
+            <li class="navigation-item">
+              <img class="navigation-link navigation-link-logo" href="index.html" src="images/logo/brand-sedona.png" alt="Рисунок логотипа Седоны">
+              <!-- Основной логотип города Седоны-->
+            </li>
+            <li class="navigation-item">
+              <a class="navigation-link" href="index.html">Главная</a>
+            </li>
+            <li class="navigation-item">
+              <a class="navigation-link" href="about.html">О Седоне</a>
+            </li>
+            <li class="navigation-item">
+              <a class="navigation-link navigation-list-current" href="catalog.html">Гостиницы</a>
+            </li>
+          </ul>
+          <ul class="navigation-list2">
+          <!-- Список второй части меню -->
+            <li class="navigation-list2-item">
+              <a class="navigation-list2-link-quote" href="#">
+              <!-- Открытие модального окна через Поиск -->
+                <img class="navigation-list2-link-img navigation-list2-link-icon" src="images/icons/search.png" alt="Иконка - поиск">
+              </a>
+            </li>
+            <li class="navigation-list2-item">
+              <a class="navigation-list2-link-quote" href="#">
+                <img class="navigation-list2-link-img navigation-list2-link-icon"  src="images/icons/heart.png" alt="Иконка - корзина">
+              </a>
+            </li>
+            <li class="navigation-list2-item">
+              <a class="navigation-list2-item-quote" href="catalog.html">
+                <form class="navigation-list2-item-button">
+                  <button class="navigation-list2-item-quote-button" type="button">
+                    <span>Хочу сюда</span>
+                  </button>
+                </form>
+              </a>
+            </li>
+          </ul>
+        </nav>
+      </header>
     <main class="main-inner">
     <!-- Основное содержимое каталога -->
       <section class="main-inner-header">
       <!-- Первая секция - форма поиска -->
-        <h1 class="main-inner-header-title">Гостиницы Седоны</h1>
+        <h1 class="main-inner-header-title">Гостиницы в Седоне</h1>
         <!-- Заголовок каталога -->
-        <img class="main-inner-foto5" src="#" alt="Скалы прозрачные">
+        <img class="main-inner-foto5" src="images/foto5.png" alt="Скалы прозрачные">
         <form class="breadcrumbs">
         <!-- Поисковые значки -->
           <ul class="breadcrumbs-form">
             <li class="breadcrumbs-item">
-              <img class="breadcrumbs-icon" src="#" alt="Иконка - дом2">
+              <img class="breadcrumbs-icon" src="images/icons/home1.png" alt="Иконка - дом2">
             </li>
             <li class="breadcrumbs-item">
-              <img class="breadcrumbs-icon" src="#" alt="Иконка - знак больше">
+              <img class="breadcrumbs-icon" src="images/icons/breadcrumbs.png" alt="Иконка - знак больше">
             </li>
             <li class="breadcrumbs-item">
               <h3 class="breadcrumbs-text">Гостиницы</h3>
@@ -140,9 +140,9 @@
             </div>
           </fieldset>
           <div class="catalog-price-buttons">
-            <!-- Кнопочная часть -->
-            <button type="submit" href="#">Применить</button><br>
-            <button type="submit" href="#">Сбросить</button>
+          <!-- Кнопочная часть -->
+            <input type="submit" value="Применить"><br>
+            <input type="reset" value="Сбросить">
           </div>
         </form>
       </section>
@@ -161,35 +161,50 @@
           </select>
         </form>
         <ul>
-          <li><img src="#" alt="Иконка - Вид с шестью ячейками"></li>
-          <li><img src="#" alt="Иконка - Компьютер"></li>
-          <li><img src="#" alt="Иконка - Маркированный список"></li>
+          <li><img src="images/icons/view-table.png" alt="Иконка - Вид с шестью ячейками"></li>
+          <li><img src="images/icons/view-slideshow.png" alt="Иконка - Компьютер"></li>
+          <li><img src="images/icons/view-list.png" alt="Иконка - Маркированный список"></li>
         </ul>
       </section>
       <section class="catalog-hotels-list">
       <!-- Третья секция - форма поиска нужных гостиниц -->
         <h2 class="visually-hidden">Список гостиниц города Седоны</h2>
         <!-- Подзаголовок формы поиска гостиниц (невидимый) -->
-        <ul class="hotels-list">
-        <!-- Список-фильтр гостиниц на выбор -->
-          <li class="hotel-card-1">
+        <form class="catalog-hotels-list-sedona">
+        <!-- Список-фильтр гостиниц Седоны на выбор -->
+          <fieldset class="hotel-card-1">
+          <!-- Первая карточка -->
             <a class="hotel-card-1-link" href="#">
-              <img class="card-1" src="#" alt="Скалы и звездное небо">
+              <img class="card-1" src="images/catalog-hotels/hotel-1-Amara-Resort-and-Spa.jpg">
               <h3 class="hotel-card-1-title">Amara Resort & Spa</h3>
+              <table class="hotel-card-1-name">
+                <tr>
+                  <td class="hotel-card-1-name-type">Гостиница</td>
+                  <td class="hotel-card-1-name-price">От 4000 ₽</td>
+                </tr>
+                <tr>
+                  <td class="hotel-card-1-name-button-for button" href="#">Подробнее</td>
+                  <td class="hotel-card-1-name-button-save button" href="#">В избранное</td>
+                </tr>
+                <tr>
+                  <td class="hotel-card-1-name-stars">
+                    <img src="images/icons/star.png" alt="Первая звезда">
+                    <img src="images/icons/star.png" alt="Вторая звезда">
+                    <img src="images/icons/star.png" alt="Третья звезда">
+                    <img src="images/icons/star.png" alt="Четвертая звезда">
+                  </td>
+                  <td class="hotel-card-1-name-rating">Рейтинг: 8.5</td>
+                </tr>
+              </table>
             </a>
-            <div class="hotel-card-1-name">
-              <p class="hotel-card-1-name-type">Гостиница</p>
-              <p class="hotel-card-1-name-price">От 4000 ₽</p>
-              <a class="hotel-card-1-name-button-for button" href="#">Подробнее</a><br>
-              <a class="hotel-card-1-name-button-save button" href="#">В избранное</a>
-            </div>
-            <div class="hotels-rating-stars">
-              <img src="#">
-              <span>Рейтинг звезд - 4</span>
-            </div>
-            <div class="rating-views">
-              <p class="rating-text">Рейтинг: 8.5</p>
-            </div>
+          </fieldset>
+
+
+
+        </form>
+
+
+
           </li>
           <li class="hotel-card-2">
             <a class="hotel-card-2-link" href="#">
@@ -218,8 +233,8 @@
             <div class="hotel-card-3-name">
               <p class="hotel-card-3-name-type">Гостиница</p>
               <p class="hotel-card-3-name-price">От 2500 ₽</p>
-              <a class="hotel-card-3-name-button-for button" href="#">Подробнее</a><br>
-              <a class="hotel-card-3-name-button-save button" href="#">В избранное</a>
+              <button type="button" class="hotel-card-3-name-button-for-button" href="#">Подробнее</button>
+              <button type="button" class="hotel-card-3-name-button-save-button" href="#">В избранное</button>
             </div>
             <div class="hotels-rating-stars">
               <img src="#">
@@ -299,38 +314,41 @@
     </main>
     <footer class="page-footer">
       <!-- Подвал главной страницы -->
-      <nav class="page-footer-contacts">
+        <nav class="page-footer-contacts">
         <!-- Меню навигации в подвале -->
-        <ul class="footer-social-list">
-        <!-- Список меню в подвале -->
-        <li class="footer-social-item">
-          <a href="https://vk.com/htmlacademy" type="button">
-            <span>Vkontakte</span>
-          </a>
-        </li>
-        <li class="footer-social-item">
-          <a href="https://t.me/htmlacademy" type="button">
-            <span>Telegram</span>
-          </a>
-        </li>
-        <li class="footer-social-item">
-          <a href="https://www.youtube.com/user/htmlacademyru" type="button">
-            <span>Youtube</span>
-          </a>
-        </li>
-          <li class="footer-social-item">
-            <a href="tel:+7(812)812-12-12">
-              <span>+7(812)812-12-12</span>
-            </a>
-          </li>
-          <li class="footer-social-item">
-            <a href="https://htmlacademy.ru/">
-              <img src="#">
-              <span>Логотип HTML academy</span>
-            </a>
-          </li>
-        </ul>
-      </nav>
-    </footer>
+          <ul class="footer-social-list">
+          <!-- Список меню в подвале -->
+            <li class="footer-social-item">
+              <a class="footer-social-item-vk" href="https://t.me/htmlacademy" type="button">
+                <span><img src="images/icons/vk.png" alt="Vkontakte"></span>
+              </a>
+            </li>
+            <li class="footer-social-item">
+              <a class="footer-social-item-telegram" href="https://t.me/htmlacademy" type="button">
+                <span><img src="images/icons/telegram.png" alt="Telegram"></span>
+              </a>
+            </li>
+            <li class="footer-social-item">
+              <a class="footer-social-item-youtube" href="https://www.youtube.com/user/htmlacademyru" type="button">
+                <span><img src="images/icons/youtube.png" alt="Youtube"></span>
+              </a>
+            </li>
+          </ul>
+          <ul>
+            <li class="footer-social-item">
+              <a href="tel:+7(812)812-12-12">
+                <span>+7(812)812-12-12</span>
+              </a>
+            </li>
+          </ul>
+          <ul>
+            <li class="footer-social-item">
+              <a href="https://htmlacademy.ru/">
+                <span><img src="images/logo/brand-htmlacademy.png" alt="Логотип HTML academy"></span>
+              </a>
+            </li>
+          </ul>
+        </nav>
+      </footer>
   </body>
 </html>
