--- a/4/index.html
+++ b/4/index.html
@@ -15,7 +15,7 @@
         <ul class="navigation-list">
         <!-- Список первой части меню -->
           <li class="navigation-item">
-            <img class="navigation-link navigation-link-logo" href="index.html" src="#" alt="Рисунок логотипа Седоны">
+            <img class="navigation-link navigation-link-logo" href="index.html" src="images/logo/brand-sedona.png" alt="Рисунок логотипа Седоны">
             <!-- Основной логотип города Седоны-->
           </li>
           <li class="navigation-item">
@@ -33,12 +33,12 @@
           <li class="navigation-list2-item">
             <a class="navigation-list2-link-quote" href="#">
             <!-- Открытие модального окна через Поиск -->
-              <img class="navigation-list2-link-img navigation-list2-link-icon" src="#" alt="Иконка - поиск">
+              <img class="navigation-list2-link-img navigation-list2-link-icon" src="images/icons/search.png" alt="Иконка - поиск">
             </a>
           </li>
           <li class="navigation-list2-item">
             <a class="navigation-list2-link-quote" href="#">
-              <img class="navigation-list2-link-img navigation-list2-link-icon"  src="#" alt="Иконка - корзина">
+              <img class="navigation-list2-link-img navigation-list2-link-icon"  src="images/icons/heart.png" alt="Иконка - корзина">
             </a>
           </li>
           <li class="navigation-list2-item">
@@ -62,28 +62,24 @@
           <ul class="main-index-header-list">
             <li class="main-index-header-item">
             <!-- Фото 1 -->
-              <img class="photo1" src="#" alt="Скалы в окрестностях города Седоны">
+              <img class="photo1" src="images/foto1.jpg" alt="Скалы в окрестностях города Седоны">
             </li>
             <li class="main-index-header-item">
             <!-- Острые углы -->
-              <img class="main-index-header-cornes" src="#" alt="Острые углы">
+              <img class="main-index-header-cornes" src="images/sharp-corners.svg" alt="Острые углы">
             </li>
             <!-- Большой логотип -->
             <li class="main-index-header-item">
             <!-- Слово по-английски "Приглашаем" -->
-              <img class="main-index-header-logo" src="#" alt="Слово по-английски - Приглашаем">
+              <img class="main-index-header-logo" src="images/logo/welcome.png" alt="Слово по-английски - Приглашаем">
             </li>
             <li class="main-index-header-item">
             <!-- Слово по-английски "в великолепную" -->
-              <img class="main-index-header-logo2" src="#" alt="Слово по-английски - в великолепную">
+              <img class="main-index-header-logo2" src="images/logo/gorgeous.svg" alt="Слово по-английски - в великолепную">
             </li>
             <li class="main-index-header-item">
               <!-- Слово по-английски "Седону" -->
-              <img class="main-index-header-logo3" src="#" alt="Слово по-английски - Седону">
-            </li>
-            <li class="main-index-header-item">
-              <!-- Словосочетание по-английски "Ибо..." -->
-              <img class="main-index-header-logo4" src="#" alt="Словосочетание по-английски - Ибо заволакивает Великий Каньон!">
+              <img class="main-index-header-logo3" src="images/logo/sedona.png" alt="Слово по-английски - Седону, а также словосочетание по-английски - Ибо заволакивает Великий Каньон!">
             </li>
           </ul>
       </section>
@@ -98,40 +94,60 @@
           <ul class="advantages-list">
           <!-- Список причин -->
             <li class="advantages-item">
-              <img class="advantages-square" src="#" alt="Фон голубого цвета">
-              <!-- Фон - прямоугольник голубого цвета -->
               <h4 class="advantages-subtitle">Настоящий городок</h4>
               <!-- Подзаголовок первой причины -->
-              <img class="advantages-line" src="#" alt="Графика - линия">
+              <ul>
+                <li>
+                  <img class="advantages-line" src="images/rectangle.png" alt="Графика - линия">
+                </li>
+              </ul>
               <p>Седона — не аттракцион для<br> туристов, там течёт своя<br> жизнь</p>
-              <img class="photo2" src="#" alt="Домики в окрестностях города Седоны">
+              <img class="advantages-square" src="images/theme-white.png" alt="Фон голубого цвета">
+              <!-- Фон - прямоугольник голубого цвета -->
+              <img class="photo2" src="images/foto2.jpg" alt="Домики в окрестностях города Седоны">
             </li>
             <li class="advantages-item">
               <h4 class="advantages-subtitle">Небольшая<br> площадь</h4>
               <!-- Подзаголовок второй причины -->
-              <img class="advantages-line" src="#" alt="Графика - линия">
+              <ul>
+                <li>
+                  <img class="advantages-line" src="images/rectangle.png" alt="Графика - линия">
+                </li>
+              </ul>
               <p>Все достопримечательности<br> находятся очень близко</p>
             </li>
             <li class="advantages-item">
               <h4 class="advantages-subtitle">Красивая<br> дорога</h4>
               <!-- Подзаголовок третьей причины -->
-              <img class="advantages-line" src="#" alt="Графика - линия">
+              <ul>
+                <li>
+                  <img class="advantages-line" src="images/rectangle.png" alt="Графика - линия">
+                </li>
+              </ul>
               <p>Ехать в Седону из Лас-Вегаса<br> совсем не скучно!</p>
             </li>
             <li class="advantages-item">
               <h4 class="advantages-subtitle">Мало<br> туристов</h4>
               <!-- Подзаголовок четвертой причины -->
-              <img class="advantages-line" src="#" alt="Графика - линия">
+              <ul>
+                <li>
+                  <img class="advantages-line" src="images/rectangle.png" alt="Графика - линия">
+                </li>
+              </ul>
               <p>Большинство едет в Гранд<br> Каньон и толпится там</p>
             </li>
             <li class="advantages-item">
-              <img class="photo3" src="#" alt="Скалы у моста дьявола">
+              <img class="photo3" src="images/foto3.jpg" alt="Скалы у моста дьявола">
+              <img class="advantages-square" src="images/theme-white.png" alt="Фон голубого цвета">
               <!-- Фон - прямоугольник голубого цвета -->
               <h4 class="advantages-subtitle">Там есть<br> мост дьявола</h4>
               <!-- Подзаголовок пятой причины -->
-              <img class="advantages-line" src="#" alt="Графика - линия">
+              <ul>
+                <li>
+                  <img class="advantages-line" src="images/rectangle.png" alt="Графика - линия">
+                </li>
+              </ul>
               <p>Да, по нему можно пройти!<br> Если вы осмелитесь,<br> разумеется</p>
-              <img class="advantages-square" src="#" alt="Фон голубого цвета">
             </li>
           </ul>
         </div>
@@ -146,19 +162,19 @@
           <!-- Подзаголовок преимуществ города Седоны (невидимый) -->
           <ul class="services-list">
             <li class="services-item">
-              <img class="services-icon" src="#" alt="Графика - дом">
+              <img class="services-icon" src="images/icons/home.png" alt="Графика - дом">
               <h4 class="services-title">Жильё</h4>
               <!-- Подзаголовок первого преимущества -->
               <p class="services-description">Рекомендуем пожить<br> в настоящем мотеле,<br> всё как в кино!</p>
             </li>
             <li class="services-item">
-              <img class="services-icon" src="#" alt="Графика - бутерброд">
+              <img class="services-icon" src="images/icons/food.png" alt="Графика - бургер">
               <h4 class="services-title">Еда</h4>
               <!-- Подзаголовок второго преимущества -->
               <p class="services-description">Всегда заказывайте<br> топовый фирменный бургер,<br> вы не разочаруетесь!</p>
             </li>
             <li class="services-item">
-              <img class="services-icon" src="#" alt="Графика - подарок">
+              <img class="services-icon" src="images/icons/souvenir.png" alt="Графика - подарок (сувениры)">
               <h4 class="services-title">Сувениры</h4>
               <!-- Подзаголовок третьего преимущества -->
               <p class="services-description">Не только китайского,<br> но и настоящего местного<br> производства!</p>
@@ -179,7 +195,7 @@
       </section>
       <section class="mailing">
         <h2 class="mailing-title">Подпишитесь на рассылку</h2>
-          <img class="photo4" src="#" alt="Вид на скалы в окрестностях Седоны с голубым фоном">
+          <img class="photo4" src="images/foto5.png" alt="Вид на скалы в окрестностях Седоны с голубым фоном">
           <p class="mailing-text">Только полезная информация и никакого спама,<br> честное бойскаутское!</p>
           <form class="mailing-form" id="form" action="https://echo.htmlacademy.ru/" method="post">
             <input name="email" type="email" placeholder="Ваш e-mail" href="mailto:email@example.com" required>
@@ -190,39 +206,42 @@
       </section>
     </main>
     <footer class="page-footer">
-      <!-- Подвал главной страницы -->
-        <nav class="page-footer-contacts">
-        <!-- Меню навигации в подвале -->
-          <ul class="footer-social-list">
-          <!-- Список меню в подвале -->
-            <li class="footer-social-item">
-              <a href="https://vk.com/htmlacademy" type="button">
-                <span>Vkontakte</span>
-              </a>
-            </li>
-            <li class="footer-social-item">
-              <a href="https://t.me/htmlacademy" type="button">
-                <span>Telegram</span>
-              </a>
-            </li>
-            <li class="footer-social-item">
-              <a href="https://www.youtube.com/user/htmlacademyru" type="button">
-                <span>Youtube</span>
-              </a>
-            </li>
-            <li class="footer-social-item">
-              <a href="tel:+7(812)812-12-12">
-                <span>+7(812)812-12-12</span>
-              </a>
-            </li>
-            <li class="footer-social-item">
-              <a href="https://htmlacademy.ru/">
-                <img src="#">
-                <span>Логотип HTML academy</span>
-              </a>
-            </li>
-          </ul>
-        </nav>
-      </footer>
+    <!-- Подвал главной страницы -->
+      <nav class="page-footer-contacts">
+      <!-- Меню навигации в подвале -->
+        <ul class="footer-social-list">
+        <!-- Список меню в подвале -->
+          <li class="footer-social-item">
+            <a class="footer-social-item-vk" href="https://t.me/htmlacademy" type="button">
+              <span><img src="images/icons/vk.png" alt="Vkontakte"></span>
+            </a>
+          </li>
+          <li class="footer-social-item">
+            <a class="footer-social-item-telegram" href="https://t.me/htmlacademy" type="button">
+              <span><img src="images/icons/telegram.png" alt="Telegram"></span>
+            </a>
+          </li>
+          <li class="footer-social-item">
+            <a class="footer-social-item-youtube" href="https://www.youtube.com/user/htmlacademyru" type="button">
+              <span><img src="images/icons/youtube.png" alt="Youtube"></span>
+            </a>
+          </li>
+        </ul>
+        <ul>
+          <li class="footer-social-item">
+            <a href="tel:+7(812)812-12-12">
+              <span>+7(812)812-12-12</span>
+            </a>
+          </li>
+        </ul>
+        <ul>
+          <li class="footer-social-item">
+            <a href="https://htmlacademy.ru/">
+              <span><img src="images/logo/brand-htmlacademy.png" alt="Логотип HTML academy"></span>
+            </a>
+          </li>
+        </ul>
+      </nav>
+    </footer>
   </body>
 </html>
