--- a/catalog.html
+++ b/catalog.html
@@ -12,53 +12,51 @@
 
   <body>
 
-    /* ------- header ------- */
-    <header class="main-header" data-test="header">
-      <h1 class="visually-hidden">Меню главной страницы</h1>
-      <nav class="main-navigation">
-        <h2 class="visually-hidden">Навигация</h2>
-        <a class="main-header-logo" href="index.html">
-          <img src="images/brand-sedona.svg" width="140" height="70" type="image/svg+xml" alt="Логотип сайта городка Седона.">
-        </a>
-        <ul class="navigation-list">
-          <li class="navigation-item">
-            <a class="navigation-link" href="index.html">Главнои</a>
-          </li>
-          <li class="navigation-item">
-            <a class="navigation-link" href="about.html">О Седоне</a>
-          </li>
-          <li class="navigation-item">
-            <a class="navigation-link navigation-text navigation-link-current" href="catalog.html" aria-current="page">Гостиниц</a>
-          </li>
-        </ul>
-        <ul class="navigation-list-user">
-          <li class="navigation-item-user">
-            <a class="navigation-link-user icon-search" href="#">
-              <span class="visually-hidden">Поиск</span>
-              <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 19 19" fill="none">
-                <path d="M18.8928 17.0083L15.1928 13.3287C16.1928 12.0359 16.8928 10.3453 16.8928 8.4558C16.8928 4.08011 13.2928 0.5 8.89282 0.5C4.49282 0.5 0.892822 4.17956 0.892822 8.55525C0.892822 12.9309 4.49282 16.511 8.89282 16.511C10.6928 16.511 12.3928 15.9144 13.7928 14.8204L17.4928 18.5L18.8928 17.0083ZM8.89282 14.5221C5.59282 14.5221 2.89282 11.837 2.89282 8.55525C2.89282 5.27348 5.59282 2.5884 8.89282 2.5884C12.1928 2.5884 14.8928 5.27348 14.8928 8.55525C14.8928 11.837 12.1928 14.5221 8.89282 14.5221Z" fill="black"/>
-              </svg>
-            </a>
-          </li>
-          <li class="navigation-item-user">
-            <a class="navigation-link-user icon-heart" href="#">
-              <span class="visually-hidden">Избранное</span>
-              <svg xmlns="http://www.w3.org/2000/svg" width="18" height="17" viewBox="0 0 19 17" fill="none">
-                <path d="M9.29282 17C8.99282 17 8.69282 16.9 8.49282 16.6C3.09282 10.5 1.79282 9.1 1.49282 8.7C0.792822 7.8 0.392822 6.6 0.392822 5.4C0.392822 2.4 2.79282 0 5.89282 0C7.19282 0 8.39282 0.5 9.39282 1.3C10.3928 0.5 11.6928 0 12.8928 0C15.8928 0 18.3928 2.4 18.3928 5.4C18.3928 6.7 17.8928 7.9 17.0928 8.8L10.0928 16.7C9.89282 16.9 9.69282 17 9.29282 17ZM3.29282 7.5C3.59282 7.9 6.79282 11.5 9.39282 14.4L15.5928 7.4C16.0928 6.9 16.2928 6.2 16.2928 5.4C16.2928 3.6 14.7928 2.1 12.9928 2.1C11.9928 2.1 10.9928 2.6 10.2928 3.4C9.99282 3.7 9.69282 3.8 9.39282 3.8C9.09282 3.8 8.79282 3.6 8.59282 3.4C7.89282 2.6 6.89282 2.1 5.89282 2.1C4.09282 2.1 2.59282 3.6 2.59282 5.4C2.49282 6.3 2.89282 7 3.29282 7.5C3.19282 7.5 3.19282 7.5 3.29282 7.5Z" fill="black"/>
-              </svg>
-              <span class="user-favorite-count">12</span>
-            </a>
-          </li>
-          <li class="navigation-item-user">
-            <a class="navigation-link-user navigation-button" href="#">Хочу сюда!</span>
-            </a>
-          </li>
-        </ul>
-      </nav>
-    </header>
+    <div class="page-container">
 
-    /* ------- main ------- */
-    <main class="main-inner">
+      <!-- /*    header    */ -->
+      <header class="main-header" data-test="header">
+        <h1 class="visually-hidden">Меню главной страницы</h1>
+        <nav class="main-navigation">
+          <h2 class="visually-hidden">Навигация</h2>
+          <a class="main-header-logo" aria-current="page">
+            <img src="images/brand-sedona.svg" width="140" height="70" type="image/svg+xml" alt="Логотип сайта городка Седона.">
+          </a>
+          <ul class="navigation-list">
+            <li class="navigation-item">
+              <a class="navigation-link navigation-link-current" aria-current="page">Главная</a>
+            </li>
+            <li class="navigation-item">
+              <a class="navigation-link" href="about.html">О Седоне</a>
+            </li>
+            <li class="navigation-item">
+              <a class="navigation-link" href="catalog.html">Гостиницы</a>
+            </li>
+          </ul>
+          <ul class="navigation-list-user">
+            <li class="navigation-item-user">
+              <a class="navigation-link-user icon-search" href="#">
+                <span class="visually-hidden">Поиск</span>
+              </a>
+            </li>
+            <li class="navigation-item-user">
+              <a class="navigation-link-user icon-heart" href="#">
+                <span class="visually-hidden">Избранное</span>
+                <svg xmlns="http://www.w3.org/2000/svg" width="18" height="17" viewBox="0 0 19 17" fill="none">
+                  <path d="M9.29282 17C8.99282 17 8.69282 16.9 8.49282 16.6C3.09282 10.5 1.79282 9.1 1.49282 8.7C0.792822 7.8 0.392822 6.6 0.392822 5.4C0.392822 2.4 2.79282 0 5.89282 0C7.19282 0 8.39282 0.5 9.39282 1.3C10.3928 0.5 11.6928 0 12.8928 0C15.8928 0 18.3928 2.4 18.3928 5.4C18.3928 6.7 17.8928 7.9 17.0928 8.8L10.0928 16.7C9.89282 16.9 9.69282 17 9.29282 17ZM3.29282 7.5C3.59282 7.9 6.79282 11.5 9.39282 14.4L15.5928 7.4C16.0928 6.9 16.2928 6.2 16.2928 5.4C16.2928 3.6 14.7928 2.1 12.9928 2.1C11.9928 2.1 10.9928 2.6 10.2928 3.4C9.99282 3.7 9.69282 3.8 9.39282 3.8C9.09282 3.8 8.79282 3.6 8.59282 3.4C7.89282 2.6 6.89282 2.1 5.89282 2.1C4.09282 2.1 2.59282 3.6 2.59282 5.4C2.49282 6.3 2.89282 7 3.29282 7.5C3.19282 7.5 3.19282 7.5 3.29282 7.5Z" fill="black"/>
+                </svg>
+                <span class="user-favorite-count">12</span>
+              </a>
+            </li>
+            <li class="navigation-item-user">
+              <a class="navigation-link-user navigation-button" href="#">Хочу сюда!</a>
+            </li>
+          </ul>
+        </nav>
+      </header>
+
+      /* ------- main ------- */
+      <main class="main-inner">
 
       <h1 class="main-inner-titul">Cайт поиска отелей в городе Седоне</h1>
       <div class="search-main"></div>
@@ -143,8 +141,8 @@
           </form>
         </section>
       </div>
-      <div>
 
+      <div>
                 <!-- Вторая секция - форма полей результатов -->
         <section class="catalog-results" data-test="catalog">
 
@@ -180,13 +178,11 @@
             </ul>
           </div>
 
-          <form class="catalog-hotels">
+          <article class="catalog-hotels">
           
             <div class="hotel-cards">
-
               <ul class="hotel-cards-list">
                 <li class="hotel-cards-item">
-                  <article class="">
                     <a class="hotel-cards-link" href="#" tabindex="-1">
                       <img  src="images/catalog/hotel-1.jpg" width="" height="" alt="Гостиница Amara-Resort-and-Spa - ночное небо у скалы в окрестностях Седоны." type="image/jpg">
                     </a>
@@ -201,10 +197,7 @@
                       <span class="visually-hidden">Четырехзвездочный отель</span>
                     </p>
                     <a class="hotel-cards-rating">Рейтинг: 8.5</a>
-                  </article>
                 </li>
-
-
                 <li class="hotel-cards-item">
                   <a class="hotel-cards-link" href="#">
                     <img src="images/catalog/hotel-2.jpg" alt="Гостиница Villas-at-Poco-Diablo - ночное небо у скалы в окрестностях Седоны." type="image/jpg">
@@ -302,9 +295,8 @@
               </li>
             </ul>
           </div>
-        </section>
-      </div>
-      <div>
+          </article>
+        </div>
 
         <!-- Третья секция - рассылка -->
         <section class="mailing mailing-subscribe-catalog" data-test="subsribe">
@@ -352,6 +344,8 @@
             </li>
           </ul>
         </footer>
+
+    </div>
 
   </body>
 
