--- a/index.html
+++ b/index.html
@@ -151,6 +151,11 @@
             <p>Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
             <a class="interest-button" href="catalog.html">Поиск гостиницы в Седоне</a>
           </form>
+          <div class="modal">
+           <div class="modal-inner">
+            <!-- Контент модального окна -->
+           </div>
+          </div>
         </section>
 
         <!-- /* Пятая секция - subsribe */ -->
