--- a/index.html
+++ b/index.html
@@ -15,45 +15,53 @@
 
       <!-- /*    header    */ -->
       <header class="page-header" data-test="header">
-        <div class="page-header-logo">
+
+        <section class="page-index">
+          <h1 class="visually-hidden">Шапка</h1>
           <a class="logo" aria-current="page">
             <span class="visually-hidden">Логотип города Седона</span>
           </a>
-        </div>
-        <nav class="main-navigation">          
-          <ul class="navigation-list">
-            <li class="navigation-item">
-              <a class="navigation-link navigation-link-current" aria-current="page">Главная</a>
-            </li>
-            <li class="navigation-item">
-              <a class="navigation-link" href="#">О Седоне</a>
-            </li>
-            <li class="navigation-item">
-              <a class="navigation-link" href="catalog.html">Гостиницы</a>
-            </li>
-          </ul>
-          <ul class="navigation-list navigation-user">
-            <li class="navigation-item">
-              <a class="navigation-link icon-search" href="#">
-                <span class="visually-hidden">Поиск</span>
-              </a>
-            </li>
-            <li class="navigation-item">
-              <a class="navigation-link icon-heart" href="#">
-                <span class="visually-hidden">Избранное</span>
-                <span class="navigation-user-statistics">12</span>
-              </a>
-            </li>
-            <li class="navigation-itemr">
-              <a class="navigation-link navigation-button navigation-want-come-here" href="#">Хочу сюда!</a>
-            </li>
-          </ul>
-        </nav>
+          <nav class="menu">
+            <ul class="menu-list">
+              <li class="menu-item">
+                <a class="menu-link menu-link-current" aria-current="page">Главная</a>
+              </li>
+              <li class="menu-item">
+                <a class="menu-link" href="#">О Седоне</a>
+              </li>
+              <li class="menu-item">
+                <a class="menu-link" href="catalog.html">Гостиницы</a>
+              </li>
+            </ul>
+          </nav>
+        </section>
+
+        <section class="page-user">
+          <nav>
+            <ul class="navigation-list navigation-user">
+              <li class="navigation-item">
+                <a class="navigation-link icon-search" href="#">
+                  <span class="visually-hidden">Поиск</span>
+                </a>
+              </li>
+              <li class="navigation-item">
+                <a class="navigation-link icon-heart" href="#">
+                  <span class="visually-hidden">Избранное</span>
+                  <span class="navigation-user-statistics">12</span>
+                </a>
+              </li>
+              <li class="navigation-item">
+                <a class="navigation-link navigation-button navigation-want-come-here" href="#">Хочу сюда!</a>
+              </li>
+            </ul>
+          </nav>
+        </section>
+
       </header>
 
       <!-- /*    main    */ -->
       <main class="main" data-test="main">
-        
+
         <article class="main-container">
 
           <h1 class="visually-hidden">Cайт поиска отелей в городе Седоне</h1>
@@ -69,9 +77,9 @@
           <section class="advantages" data-test="advantages">
             <h2 class="advantages-title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
             <p class="advantages-text">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
-            <article class="advantages-reasons">              
+            <article class="advantages-reasons">
               <ul class="advantages-list">
-                <li class="advantages-item">                    
+                <li class="advantages-item">
                   <div >
                     <h3 class="advantages-title-cards">Настоящий городок</h3>
                     <p class="advantages-title-cards-text">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
@@ -112,8 +120,8 @@
             <h2>Приезжайте в Седону отдохнуть в комфорте и уюте!</h2>
             <p class="services-text">Опытный персонал и качественное обслуживание!</p>
             <div class="services-reasons">
-              <h3 class="visually-hidden">Инфраструктура</h3>              
-              <ul class="services-list">                
+              <h3 class="visually-hidden">Инфраструктура</h3>
+              <ul class="services-list">
                 <li class="services-item services-item-housing">
                   <object data="images/icons/home.svg"> /* Лучше в стиль отправить */
                     <img src="../images/icons/home.svg" width="75" height="72" role="img" aria-label="Домик" type="image/svg+xml">
@@ -183,8 +191,8 @@
                       <button class="button button-mailing" type="submit">Подписаться</button>
                     </td>
                   </tr>
-                </table>                                
-              </label>              
+                </table>
+              </label>
             </form>
           </section>
 
